[TRIVIAL] Use Java 21 syntax, lint